k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opportunities-frontend
spec:
  selector:
    app: opportunities-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
